Fixed issue with box shadow clipping

--- a/src/scss/photo-grid.scss
+++ b/src/scss/photo-grid.scss
@@ -5,24 +5,12 @@
   flex-wrap: wrap;
 }
 
-.photo-thumbnail {
-  width: 250px;
-  height: 200px;
-  overflow: hidden;
-  margin: 10px;
-  object-fit: cover;
+.thumbnail-wrapper {
   border-radius: 20px;
-  transition: 400ms;
-  overflow: hidden;
-}
-
-.thumbnail-container {
+  margin: 10px;
   position: relative;
-  overflow: hidden;
-
-  &:hover .thumbnail-caption {
-    opacity: 1;
-  }
+  transition: box-shadow 400ms ease-in-out;
+  cursor: pointer;
 
   .thumbnail-caption {
     border-bottom-left-radius: 20px;
@@ -34,10 +22,9 @@
     font-family: 'DM Sans', Arial, Helvetica, sans-serif;
     text-align: center;
     position: absolute;
-    bottom: 7px;
+    bottom: 0px;
     left: 0;
     right: 0;
-    margin: 10px;
     opacity: 0;
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 
@@ -48,20 +35,37 @@
       white-space: nowrap;
     }
   }
+
+  &:hover {
+    box-shadow: map-get($box-shadows, 'md');
+    .thumbnail-caption {
+      opacity: 1;
+    }
+  }
+}
+
+.photo-thumbnail {
+  width: 250px;
+  height: 200px;
+  overflow: hidden;
+  object-fit: cover;
+  transition: 400ms;
+  overflow: hidden;
 }
 
 .ant-image {
   background-color: transparent !important;
   transition: 400ms;
+  display: inline;
+
+  img {
+    border-radius: 20px;
+  }
 }
 
 .ant-image:hover {
   transition: 400ms;
   background-color: transparent !important;
-
-  img {
-    box-shadow: map-get($map: $box-shadows, $key: 'md');
-  }
 }
 
 .ant-image-mask {
